--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,21 +1,37 @@
 <%- include('partials/header') %>
 
-<div class="text-center">
-    <h1>About Me</h1>
+<div class="container text-center about-section">
+    <h2>About Me</h2>
     <div class="row mt-4">
         <div class="col-md-4">
-            <img src="/images/test_3.jpg" alt="Yedel·Ahat" class="img-fluid rounded-circle">
+            <!--rounded-circle-->
+            <img src="/images/me.jpg" alt="Yedel·Ahat" class="img-fluid"  style="width: 200px;">
         </div>
         <div class="col-md-8">
-            <p>Hi! My name is Yedeli Ahati. I graduated from University of Sheffield and am now a software engineer at  <a href="https://www.appfolio.com/" target="_blank"><b>AppFolio, Inc</b></a>. I have interned at <a href="https://www.mercari.com/" target="_blank"><b>Mercari US</b></a>、<a href="https://promoboxx.com/" target="_blank"><b>Promoboxx</b></a> and <a href="http://www.hksl.com.hk/" target="_blank"><b>Hong Kong Systems Limited</b></a> .I am continuously searching for opportunities to grow and expand my knowledge in software development. Outside of my studies, I enjoy playing basketball, volleyball, as well as weights training.</p>
-        </div>
-        <div class="media center">
-            <div class="d-flex justify-content-center mt-3">
-                <a href="https://www.linkedin.com/in/thomas-cheong/" class="fab fa-linkedin ms-3" target="_blank"></a>
-                <a href="https://github.com/tommycheong07" class="fab fa-github ms-3" target="_blank"></a>
-            </div>
-        </div>
+            <p>
+                Hi! My name is Yedeli Ahati. I graduated from
+                <a href="https://www.sheffield.ac.uk/" target="_blank"><b>University of Sheffield</b></a>
+                and have worked as a software engineer at
+                <a href="https://www.cupdata.com/" target="_blank"><b>UnionPay Data</b></a>.
+                I also gained experience at Shanghai Hongshuai Compute System Ltd.
+                I am continuously searching for opportunities to grow and expand my knowledge in software development.
+                Outside of my studies, I enjoy dragon boat racing and have participated in most national competitions in China.
+                Currently, I am a member of the
+                <a href="https://www.instagram.com/amathus_dbc/" target="_blank"><b>Liverpool Dragon Boat Club</b></a>.
+                Additionally, I founded the Sheffield Dragon Boat Team and led them to achieve
+                <a href="https://mp.weixin.qq.com/s/UPNEBN7XOsVlOIK9NBQ3AQ" target="_blank"><b>a top ten finish in the UK</b></a>.
+                I also love running and completed the 2023 Sheffield Half Marathon in
+                <a href="https://chiptiming.co.uk/events/run-for-all-sheffield-half-marathon-2023/?bib=&fname=Yedeli&sname=&category=&gender=&club=#display-results" target="_blank"><b>1 hour and 34 minutes</b></a>.
+            </p>
 
+        </div>
+    </div>
+    <div class="media center">
+        <div class="d-flex justify-content-center mt-3">
+            <a href="https://uk.linkedin.com/in/yedeli-ahati-3a2042231" class="fab fa-linkedin ms-3" target="_blank"></a>
+            <a href="https://github.com/EdilCoder" class="fab fa-github ms-3" target="_blank"></a>
+            <a href="https://www.instagram.com/edil.ahat/" class="fab fa-instagram ms-3" target="_blank"></a>
+        </div>
     </div>
 </div>
 
