--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,7 @@
 
-<footer class="bg-light text-center text-lg-start mt-4">
-    <div class="text-center p-3">
+<!--<footer class="bg-light text-center text-lg-start mt-2" >-->
+<footer class="text-center text-lg-start mt-2" >
+    <div class="text-center p-1">
         © 2024 Yedel·Ahat
     </div>
 </footer>
