--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,12 +8,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- FontAwesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
     <!-- Local CSS -->
     <link rel="stylesheet" href="/css/style.css">
 </head>
-<body class="body">
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
+<body class="body"><!--
+<nav class="navbar navbar-expand-lg navbar-light bg-light">-->
+<nav class="navbar navbar-expand-lg">
+    <div class="container">
         <a class="navbar-brand" href="/">Yedel·Ahat</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="change navigate">
             <span class="navbar-toggler-icon"></span>
